src/client/app/live-game/scoreboard/scoreboard.component.scss
$img-height: 33px;
$img-width: 59px;
$text-color: #d9d9d9;
$nav-menu-color: #1e2020;
$nav-menu-color-hover: #2e3030;
$menu-gradiant-dire: #5a171d;
$menu-gradiant-radiant: #4a9b4c;
$grey: #808080;
$darkgrey: #a9a9a9;
$box-shadow-color: rgba(0, 0, 0, 0.75);
$box-shadow-color-hover: rgba(34, 98, 126, 0.5);
$border-color: #2f2724;
$black: #000;
$background: #111;

li {
  border: 1px solid $border-color;
  display: flex;
  height: 46px;
  list-style-type: none;
  padding: 2px 0;
}

ul {
  margin: 0;
  padding: 0;
}

img {
  height: 46px;
  margin-left: 3px;
  width: 82.28px;
}

.grid {
  display: flex;
  flex-direction: row;
  flex-flow: row wrap;
  height: 500px;
  justify-content: center;
}

.player-name {
  margin-left: 10px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 210px;
}

.side {
  display: flex;
  justify-content: center;
  width: 195px;
}

.draft {
  margin-top: 30px;
  transform: scale(.7);
  transform-origin: top;
}

.dire-draft {
  background: linear-gradient(to bottom, $menu-gradiant-dire, $background);
  border-right: 1px solid $border-color;
  border-top: 1px solid $border-color;
}

.radiant-draft {
  background: linear-gradient(to bottom, $menu-gradiant-radiant, $background);
  border-left: 1px solid $border-color;
  border-top: 1px solid $border-color;
}

.container {
  color: $text-color;
  font-size: 1rem;
  height: 600px;
  width: 400px;
}

.nav-menu {
  background-color: $nav-menu-color;

  li {
    align-items: center;
    display: flex;

    &:nth-child(n+2) {

      &:hover {
        background-color: $nav-menu-color-hover;
      }
    }
  }
}

.dire {
  background: linear-gradient(to right, $menu-gradiant-dire, $black);
}

.radiant {
  background: linear-gradient(to right, $menu-gradiant-radiant, $black);
}

.nav-players {
  li {
    align-items: center;
    display: flex;
    justify-content: flex-start;
  }
}

.players {
  margin: 0;
}

.value {
  margin-left: auto;
  overflow: hidden;
  padding-right: 10px;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.drop-down-menu {
  border: 1px solid $border-color;
  box-shadow: 0 0 7px 1px $box-shadow-color;
  display: flex;
  font-size: 1rem;
  justify-content: flex-start;
  margin-bottom: 5px;
  padding: 4px;

  &:hover {
    background: $box-shadow-color-hover;
  }
}

.down-arrow {
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-top: 10px solid $grey;
  height: 0;
  width: 0;
}

.arrow-box {
  align-items: center;
  background: transparent;
  border: 1px solid $darkgrey;
  display: flex;
  height: 30px;
  justify-content: center;
  width: 40px;
}

.stat-title {
  display: flex;
  margin: 0 5px;
  padding-top: 6px;
}

.repsawn-img {
  display: flex;
  position: relative;
}

.blank {
  height: 46px;
  margin-left: 3px;
  width: 82.28px;
}

